--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
 
 [project.optional-dependencies]
 localhf = [
-  "torch>=2.5,<2.6",
+  "torch",
   "transformers>=4.51,<5",
   "accelerate>=1.0,<2",
   "peft>=0.13,<1",
