--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,19 @@ dependencies = [
   "pydantic>=2.0",
   "rich>=13.0",
   "httpx>=0.24",
-  "pytest>=7.0",
-  "matplotlib>=3.7",
   "numpy>=1.24",
   "packaging>=23.0",
 ]
 
 [project.optional-dependencies]
+dev = [
+  "pytest>=7.0",
+  "ruff>=0.5",
+  "mypy>=1.10",
+]
+viz = [
+  "matplotlib>=3.7",
+]
 localhf = [
   "torch",
   "transformers>=4.51,<5",
